Release ...
* nroff: A special terminal name, -Tlocale, has been introduced. With this
  option, UTF-8 output is generated if permitted by the current LC_CTYPE
  locale, and regular -Tlp output otherwise.
* [nt]roff: A new option, "-x", enables the recognition of extended
  features that may affect compatibility with previous versions. The "-X"
  option disables these features; this is currently the default.
* [nt]roff: With the -x option, it is now possible to use ".de", ".ds",
  ".nr", and similar requests with more than two-character name arguments,
  as in ".de longname", and to access such macros later with ".longname",
  strings with "\*[longname]", and number registers with "\n[longname]".
* [nt]roff: The "\$@" and "\$*" escape sequences to print all arguments
  to a macro are now understood with the -x option.
* [nt]roff: The static block list limit NBLIST has been removed, memory
  is now dynamically allocated as needed.
* [nt]roff: There is no static limit on the number of macros/strings and
  the number of number registers anymore.
* -man: A defect in the supplied -man macro package caused headers and
  footers to be garbled when they were printed between parts of a tbl table
  that was split across pages.

Release 050813
* Initial release.